[project]
name = "22-homework"
version = "0.1.0"
description = ""
authors = [
    {name = "Amayak Avedyan",email = "Amajk577@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0,<7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.19.1"
black = "^25.12.0"
isort = "^7.0.0"

